--- a/src/components/feedback.html
+++ b/src/components/feedback.html
@@ -23,7 +23,7 @@
 			</div>  
 			
 			<ul>
-				<li><a href="../index.html">Home</a></li>
+				<li><a href="/index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="trending.html">Events</a></li>
 				<li><a class = "active" href="feedback.html">Feedback</a></li>
@@ -31,7 +31,7 @@
 				<div class="dropdown" data-dropdown>
 					<button id="link" class="material-symbols-outlined" data-dropdown-button>menu</button>
 					<div class="dropdown-menu">
-						<a href="../index.html">Home</a>
+						<a href="/index.html">Home</a>
 						<a href="about.html">About</a>
 						<a href="trending.html">Events</a>
 						<a href="feedback.html">Feedback</a>
