--- a/src/components/about.html
+++ b/src/components/about.html
@@ -19,7 +19,7 @@
                 </div>  
 				
 				<ul>
-					<li><a href="../index.html">Home</a></li>
+					<li><a href="/index.html">Home</a></li>
 					<li><a class="active" href="about.html">About</a></li>
 					<li><a href="trending.html">Events</a></li>
 					<li><a href="feedback.html">Feedback</a></li>
@@ -27,7 +27,7 @@
 					<div class="dropdown" data-dropdown>
                         <button id="link" class="material-symbols-outlined" data-dropdown-button>menu</button>
                         <div class="dropdown-menu">
-                            <a href="../index.html">Home</a>
+                            <a href="/index.html">Home</a>
 					        <a href="about.html">About</a>
 					        <a href="trending.html">Events</a>
 					        <a href="feedback.html">Feedback</a>
